src/objects/Client_Product_Association__c.object
<CustomObject>
    <description>Junction Object to be used for associating Products to Clients</description>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Client Product Associations</relationshipLabel>
        <relationshipName>Client_Product_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Client Product Associations</relationshipLabel>
        <relationshipName>Client_Product_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Client Product Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{000}</displayFormat>
        <label>Client Product Association Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Product Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>